Tweaks and bugfixes leading to release -Fix for several litematica buttons having an effect and desynchronizing syncmaticas state -fix for security issues regarding file names and name collisions -implemented code to get actual dimension name -disabled Material Gatherings button and gave share button a name -updated readme

--- a/src/main/resources/assets/syncmatica/lang/en_us.json
+++ b/src/main/resources/assets/syncmatica/lang/en_us.json
@@ -5,6 +5,7 @@
 	"syncmatica.gui.button.unload": "Unload",
 	"syncmatica.gui.button.remove": "Remove",
 	"syncmatica.gui.button.download": "Download",
+	"syncmatica.gui.button.share": "Share",
 	"syncmatica.gui.button.material_gathering_placement": "Materials",
 	"syncmatica.gui.title.manage_server_placements": "Manage Server Placements",
 	"syncmatica.gui.label.placement_info.file_name": "File Name",
